desktop file Fixes missing ; on lists remove miniicon 0->false
svn path=/trunk/kdeaccessibility/kmouth/; revision=372675

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -9,7 +9,7 @@ Comment=
 Comment[pl]=Program do oglądania powiększonych fragmentów ekranu
 Comment[ro]=Un utilitar de mărit zone ale ecranului
 Comment[xx]=xxxx
-Terminal=0
+Terminal=false
 Name=KMouth
 Name[ar]=برنامج KMouth
 Name[cy]=KCeg
@@ -18,7 +18,7 @@ Name[hi]=के-माउथ
 Name[is]=KMunnur
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
-Name[ta]=K மவுத்
+Name[ta]=K வாய்
 Name[tg]=KДаҳон
 Name[xx]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
@@ -37,12 +37,14 @@ GenericName[es]=Interfaz de usuario para sintetizador vocal
 GenericName[et]=Kõnesüntesaator
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
+GenericName[ga]=Clár tosaigh an sintéiseoir cainte
 GenericName[gl]=Interface de usuario para sintetizador de voz
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
@@ -56,11 +58,10 @@ GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Сучеље за синтетизатор говора
 GenericName[sr@Latn]=Sučelje za sitetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
-GenericName[ta]=ஸ்பீர் சின்தசைசர் ப்ரான்டட்ச்
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[xx]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
 GenericName[zh_TW]=語音合成器前端
-Categories=Qt;KDE;Utility;X-KDE-More
+Categories=Qt;KDE;Utility;X-KDE-More;
