CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdeaccessibility/kmouth/; revision=375595

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -16,6 +16,7 @@ Name[es]=Inglés
 Name[et]=Inglise
 Name[fi]=Englantilainen
 Name[fr]=Anglais
+Name[ga]=Béarla
 Name[gl]=Inglés
 Name[he]=אנגלית
 Name[hi]= अंग्रेजी
@@ -38,10 +39,11 @@ Name[sl]=angleško
 Name[sr]=Енглески
 Name[sr@Latn]=Engleski
 Name[sv]=Engelska
-Name[ta]=ஆங்கிளம்
+Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
 Name[th]=อังกฤษ
 Name[tr]=İngilizce
+Name[uk]=Англійська
 Name[uz]=Инглизча
 Name[xx]=xxEnglishxx
 Name[zh_CN]=英语
