--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -52,7 +52,7 @@ GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
 GenericName[ro]=Interfaţă pentru sinteză vocală
-GenericName[ru]=Интерфейс к синтезатору речи
+GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Сучеље за синтетизатор говора
@@ -61,6 +61,7 @@ GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
+GenericName[uk]=Графічна оболонка синтезатора мовлення
 GenericName[xx]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
 GenericName[zh_TW]=語音合成器前端
