CVS_SILENT made messages (.desktop file)
svn path=/branches/KDE_3_3_BRANCH/kdeaccessibility/kmouth/; revision=382568

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -35,6 +35,7 @@ GenericName[es]=Interfaz de usuario para sintetizador vocal
 GenericName[et]=Kõnesüntesaator
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
+GenericName[ga]=Clár tosaigh an sintéiseoir cainte
 GenericName[gl]=Interface de usuario para sintetizador de voz
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
