CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdeaccessibility/kmouth/; revision=384484

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -23,6 +23,7 @@ Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
+Name[lt]=Vokiečių
 Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
