--- a/books/en.desktop
+++ b/books/en.desktop
@@ -24,6 +24,7 @@ Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
+Name[lt]=Anglų
 Name[ms]=Inggeris
 Name[mt]=Ingliż
 Name[nb]=Engelsk
