--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -24,6 +24,7 @@ Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
+Name[lt]=Švedų
 Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
