CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdeaccessibility/kmouth/; revision=390802

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -6,7 +6,6 @@ Exec=kmouth -caption "%c" %i %m
 Icon=kmouth
 DocPath=kmouth/index.html
 Comment=
-Comment[pl]=Program do oglądania powiększonych fragmentów ekranu
 Comment[ro]=Un utilitar de mărit zone ale ecranului
 Comment[xx]=xxxx
 Terminal=false
@@ -55,7 +54,7 @@ GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
-GenericName[sr]=Сучеље за синтетизатор говора
+GenericName[sr]=Интерфејс за синтетизатор говора
 GenericName[sr@Latn]=Sučelje za sitetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
