--- a/books/de.desktop
+++ b/books/de.desktop
@@ -18,7 +18,7 @@ Name[fr]=Allemand
 Name[ga]=Gearmáinis
 Name[gl]=Alemán
 Name[he]=גרמנית
-Name[hi]= जर्मन
+Name[hi]= जर्मनी
 Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
