--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -7,7 +7,6 @@ Icon=kmouth
 DocPath=kmouth/index.html
 Comment=
 Comment[ro]=Un utilitar de mărit zone ale ecranului
-Comment[xx]=xxxx
 Terminal=false
 Name=KMouth
 Name[ar]=برنامج KMouth
@@ -19,14 +18,13 @@ Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
-Name[xx]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة النَظام الصَوتي
 GenericName[bg]=Синтезатор на глас
 GenericName[bs]=Program za sintezu govora
 GenericName[ca]=Interfície per al sintetitzador de veu
-GenericName[cs]=Rozhraní hlasového synthetizátoru
+GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
 GenericName[de]=Oberfläche für Sprach-Synthesizer
@@ -55,13 +53,12 @@ GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Интерфејс за синтетизатор говора
-GenericName[sr@Latn]=Sučelje za sitetizator govora
+GenericName[sr@Latn]=Interfejs za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
-GenericName[xx]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
 GenericName[zh_TW]=語音合成器前端
 Categories=Qt;KDE;Utility;X-KDE-More;
