CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdeaccessibility/kmouth/; revision=401169

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -55,7 +55,7 @@ GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Интерфејс за синтетизатор говора
-GenericName[sr@Latn]=Sučelje za sitetizator govora
+GenericName[sr@Latn]=Interfejs za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
