--- a/books/en.desktop
+++ b/books/en.desktop
@@ -12,7 +12,7 @@ Name[da]=Engelsk
 Name[de]=Englisch
 Name[el]=Αγγλικά
 Name[eo]=Angla
-Name[es]=Inglés
+Name[es]=InglÃ©s
 Name[et]=Inglise
 Name[fi]=Englantilainen
 Name[fr]=Anglais
