CVS_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=413576

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -1,6 +1,7 @@
-# KDE Config File  
+# KDE Config File
 [Desktop Entry]
 Name=Dutch
+Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[da]=Hollandsk
 Name[sv]=Holländska
