SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=419302

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -11,7 +11,7 @@ Name[da]=Tysk
 Name[de]=Deutsch
 Name[el]=Γερμανικά
 Name[eo]=Germana
-Name[es]=AlemÃ¡n
+Name[es]=Alemán
 Name[et]=Saksa
 Name[fi]=Saksalainen
 Name[fr]=Allemand
