--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -32,7 +32,7 @@ GenericName[da]=Forende til tale-synthesizer
 GenericName[de]=Oberfläche für Sprach-Synthesizer
 GenericName[en_GB]=Speech Synthesiser Frontend
 GenericName[eo]=Fasado Por Parolsintezilo
-GenericName[es]=Interfaz de usuario para sintetizador vocal
+GenericName[es]=Interfaz de usuario para síntesis de voz
 GenericName[et]=Kõnesüntesaator
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
