SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=421956

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -5,4 +5,6 @@ Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[da]=Hollandsk
 Name[es]=Danés
+Name[sr]=Холандски
+Name[sr@Latn]=Holandski
 Name[sv]=Holländska
