SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=424492

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -29,6 +29,7 @@ Name[mt]=Ġermaniż
 Name[nb]=Tysk
 Name[nl]=Duits
 Name[nn]=Tysk
+Name[pa]=ਜਰਮਨ
 Name[pl]=Niemiecka
 Name[pt]=Alemão
 Name[pt_BR]=Alemão
