--- a/books/en.desktop
+++ b/books/en.desktop
@@ -30,6 +30,7 @@ Name[mt]=Ingliż
 Name[nb]=Engelsk
 Name[nl]=Engels
 Name[nn]=Engelsk
+Name[pa]=ਅੰਗਰੇਜ਼ੀ
 Name[pl]=Angielska
 Name[pt]=Inglês
 Name[pt_BR]=Inglês
