--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -5,6 +5,8 @@ Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[da]=Hollandsk
 Name[es]=Danés
+Name[pa]=ਡੱਚ
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
 Name[sv]=Holländska
+Name[tr]=Hollanda dili
