--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -30,6 +30,7 @@ Name[mt]=Svediż
 Name[nb]=Svensk
 Name[nl]=Zweeds
 Name[nn]=Svensk
+Name[pa]=ਸਵੀਡਨੀ
 Name[pl]=Szwedzka
 Name[pt]=Sueco
 Name[pt_BR]=Suíço
