--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -15,6 +15,7 @@ Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[hi]=के-माउथ
 Name[is]=KMunnur
+Name[pa]=ਕੇ-ਮੂੰਹ
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K வாய்
