SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=425592

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -35,6 +35,7 @@ Name[pt]=Alemão
 Name[pt_BR]=Alemão
 Name[ro]=Germană
 Name[ru]=Немецкий
+Name[rw]=Ikidage
 Name[sk]=Nemecky
 Name[sl]=nemško
 Name[sr]=Немачки
