--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -6,6 +6,7 @@ Name[br]=Nederlandeg
 Name[da]=Hollandsk
 Name[es]=Danés
 Name[pa]=ਡੱਚ
+Name[rw]=Ikinyaholande
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
 Name[sv]=Holländska
