--- a/books/en.desktop
+++ b/books/en.desktop
@@ -36,6 +36,7 @@ Name[pt]=Inglês
 Name[pt_BR]=Inglês
 Name[ro]=Engleză
 Name[ru]=Английский
+Name[rw]=Icyongereza
 Name[sk]=Anglicky
 Name[sl]=angleško
 Name[sr]=Енглески
