--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -36,6 +36,7 @@ Name[pt]=Sueco
 Name[pt_BR]=Suíço
 Name[ro]=Suedeză
 Name[ru]=Шведский
+Name[rw]=Ikinyasuwede
 Name[sk]=Švédsky
 Name[sl]=švedsko
 Name[sr]=Шведски
