SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.4/kdeaccessibility/kmouth/; revision=428460

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -28,6 +28,7 @@ GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
 GenericName[de]=Oberfläche für Sprach-Synthesizer
+GenericName[el]=Συνθέτης ομιλίας
 GenericName[en_GB]=Speech Synthesiser Frontend
 GenericName[eo]=Fasado Por Parolsintezilo
 GenericName[es]=Interfaz de usuario para sintetizador vocal
