--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -5,6 +5,7 @@ Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[da]=Hollandsk
 Name[es]=Danés
+Name[et]=Hollandi
 Name[ga]=Ollainnis
 Name[pa]=ਡੱਚ
 Name[rw]=Ikinyaholande
