SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=435750

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -13,4 +13,4 @@ Name[rw]=Ikinyaholande
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
 Name[sv]=Holländska
-Name[tr]=Hollanda dili
+Name[tr]=Flemenkçe
