SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=438785

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -27,7 +27,7 @@ GenericName[ar]=واجهة النَظام الصَوتي
 GenericName[bg]=Синтезатор на глас
 GenericName[bs]=Program za sintezu govora
 GenericName[ca]=Interfície per al sintetitzador de veu
-GenericName[cs]=Rozhraní hlasového synthetizátoru
+GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
 GenericName[de]=Oberfläche für Sprach-Synthesizer
