--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -5,8 +5,10 @@ Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
+Name[de]=Niederländisch
 Name[es]=Danés
 Name[et]=Hollandi
+Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[pa]=ਡੱਚ
 Name[rw]=Ikinyaholande
