SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.4/kdeaccessibility/kmouth/; revision=445267

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -13,6 +13,7 @@ Name[el]=Γερμανικά
 Name[eo]=Germana
 Name[es]=Alemán
 Name[et]=Saksa
+Name[eu]=Alemaniera
 Name[fi]=Saksalainen
 Name[fr]=Allemand
 Name[ga]=Gearmáinis
