--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -14,6 +14,7 @@ Name[el]=Σουηδικά
 Name[eo]=Sveda
 Name[es]=Sueco
 Name[et]=Rootsi
+Name[eu]=Suediera
 Name[fi]=Ruotsalainen
 Name[fr]=Suédois
 Name[ga]=Sualainnis
