--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -33,6 +33,7 @@ GenericName[en_GB]=Speech Synthesiser Frontend
 GenericName[eo]=Fasado Por Parolsintezilo
 GenericName[es]=Interfaz de usuario para sintetizador vocal
 GenericName[et]=Kõnesüntesaator
+GenericName[eu]=Hizkera-sintetizadorearen interfazea
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Clár tosaigh an sintéiseoir cainte
