--- a/books/en.desktop
+++ b/books/en.desktop
@@ -14,6 +14,7 @@ Name[el]=Αγγλικά
 Name[eo]=Angla
 Name[es]=Inglés
 Name[et]=Inglise
+Name[eu]=Ingelesa
 Name[fi]=Englantilainen
 Name[fr]=Anglais
 Name[ga]=Béarla
