SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=445909

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -10,6 +10,7 @@ Name[es]=Danés
 Name[et]=Hollandi
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
+Name[it]=Olandese
 Name[pa]=ਡੱਚ
 Name[rw]=Ikinyaholande
 Name[sr]=Холандски
