SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=450462

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -9,6 +9,7 @@ Name[cs]=Německy
 Name[cy]=Almaeneg
 Name[da]=Tysk
 Name[de]=Deutsch
+Name[el]=Γερμανικά
 Name[eo]=Germana
 Name[es]=Alemán
 Name[et]=Saksa
@@ -23,6 +24,7 @@ Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
 Name[lt]=Vokiečių
+Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
 Name[nl]=Duits
@@ -43,6 +45,7 @@ Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
 Name[th]=เยอรมัน
 Name[tr]=Almanca
+Name[uk]=Німецька
 Name[uz]=Олмонча
 Name[xx]=xxGermanxx
 Name[zh_CN]=德语
