--- a/books/en.desktop
+++ b/books/en.desktop
@@ -10,6 +10,7 @@ Name[cs]=Anglicky
 Name[cy]=Saesneg
 Name[da]=Engelsk
 Name[de]=Englisch
+Name[el]=Αγγλικά
 Name[eo]=Angla
 Name[es]=Inglés
 Name[et]=Inglise
@@ -24,6 +25,7 @@ Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
 Name[lt]=Anglų
+Name[ms]=Inggeris
 Name[mt]=Ingliż
 Name[nb]=Engelsk
 Name[nl]=Engels
@@ -44,6 +46,7 @@ Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
 Name[th]=อังกฤษ
 Name[tr]=İngilizce
+Name[uk]=Англійська
 Name[uz]=Инглизча
 Name[xx]=xxEnglishxx
 Name[zh_CN]=英语
