--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -10,6 +10,7 @@ Name[cs]=Švédsky
 Name[cy]=Swedeg
 Name[da]=Svensk
 Name[de]=Schwedisch
+Name[el]=Σουηδικά
 Name[eo]=Sveda
 Name[es]=Sueco
 Name[et]=Rootsi
@@ -24,6 +25,7 @@ Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
 Name[lt]=Švedų
+Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
 Name[nl]=Zweeds
@@ -44,6 +46,7 @@ Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
 Name[th]=สวีเดน
 Name[tr]=İsveççe
+Name[uk]=Шведська
 Name[uz]=Шведча
 Name[xx]=xxSwedishxx
 Name[zh_CN]=瑞典语
