--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -31,6 +31,7 @@ GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
 GenericName[de]=Oberfläche für Sprach-Synthesizer
+GenericName[el]=Συνθέτης ομιλίας
 GenericName[en_GB]=Speech Synthesiser Frontend
 GenericName[eo]=Fasado Por Parolsintezilo
 GenericName[es]=Interfaz de usuario para síntesis de voz
@@ -61,6 +62,7 @@ GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
+GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[xx]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
 GenericName[zh_TW]=語音合成器前端
