SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=450815

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -12,6 +12,7 @@ Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[it]=Olandese
 Name[pa]=ਡੱਚ
+Name[ru]=Голландский
 Name[rw]=Ikinyaholande
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
