--- a/wordcompletion/Makefile.am
+++ b/wordcompletion/Makefile.am
@@ -5,9 +5,9 @@ INCLUDES = $(all_includes)
 libwordcompletion_a_METASOURCES = AUTO
 
 libwordcompletion_a_SOURCES = wordcompletionui.ui creationsourceui.ui creationsourcedetailsui.ui kdedocsourceui.ui \
-                 wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp dictionarycreationwizard.cpp klanguagebutton.cpp klanguagebuttonhelper.cpp
+                 wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp dictionarycreationwizard.cpp klanguagebuttonhelper.cpp
 
 EXTRA_DIST = wordcompletionui.ui creationsourceui.ui creationsourcedetailsui.ui kdedocsourceui.ui \
                  creationsourceui.ui.h creationsourcedetailsui.ui.h kdedocsourceui.ui.h \
                  wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp dictionarycreationwizard.cpp klanguagebutton.cpp klanguagebuttonhelper.cpp \
-                 wordlist.h wordcompletion.h wordcompletionwidget.h dictionarycreationwizard.h klanguagebutton.h klanguagebuttonhelper.h
+                 wordlist.h wordcompletion.h wordcompletionwidget.h dictionarycreationwizard.h klanguagebuttonhelper.h
