--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -3,6 +3,7 @@
 Name=Dutch
 Name[bg]=Холандски
 Name[br]=Nederlandeg
+Name[cs]=Holandsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
 Name[de]=Niederländisch
