SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.4/kdeaccessibility/kmouth/; revision=453159

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -2,6 +2,7 @@
 Name=German
 Name[ar]=ألمانية
 Name[bg]=Немски
+Name[br]=Alamaneg
 Name[bs]=Njemački
 Name[ca]=Alemany
 Name[cs]=Německy
@@ -40,6 +41,7 @@ Name[sr]=Немачки
 Name[sr@Latn]=Nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
+Name[tg]=Немисӣ
 Name[th]=เยอรมัน
 Name[tr]=Almanca
 Name[uk]=Німецька
