--- a/books/en.desktop
+++ b/books/en.desktop
@@ -3,6 +3,7 @@
 Name=English
 Name[ar]=إنجليزية
 Name[bg]=Английски
+Name[br]=Saozneg
 Name[bs]=Engleski
 Name[ca]=Anglès
 Name[cs]=Anglicky
@@ -41,6 +42,7 @@ Name[sr]=Енглески
 Name[sr@Latn]=Engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
+Name[tg]=Англисӣ
 Name[th]=อังกฤษ
 Name[tr]=İngilizce
 Name[uk]=Англійська
