--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -17,6 +17,7 @@ Name[is]=KMunnur
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K வாய்
+Name[tg]=KДаҳон
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة النَظام الصَوتي
@@ -56,6 +57,7 @@ GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Интерфејс за синтетизатор говора
 GenericName[sr@Latn]=Interfejs za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
+GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
