--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -3,6 +3,7 @@
 Name=Swedish
 Name[ar]=سويدية
 Name[bg]=Шведски
+Name[br]=Svedeg
 Name[bs]=Švedski
 Name[ca]=Suec
 Name[cs]=Švédsky
@@ -41,6 +42,7 @@ Name[sr]=Шведски
 Name[sr@Latn]=Švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
+Name[tg]=Шведӣ
 Name[th]=สวีเดน
 Name[tr]=İsveççe
 Name[uk]=Шведська
