SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=456168

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -49,6 +49,7 @@ GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
+GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਮੁੱਖ
 GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
