--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -9,6 +9,7 @@ Name[da]=Hollandsk
 Name[de]=Niederländisch
 Name[es]=Danés
 Name[et]=Hollandi
+Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[it]=Olandese
