--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -13,6 +13,7 @@ Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[it]=Olandese
+Name[lt]=Olandų
 Name[pa]=ਡੱਚ
 Name[ru]=Голландский
 Name[rw]=Ikinyaholande
