SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=458433

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -3,6 +3,7 @@
 Name=Dutch
 Name[bg]=Холандски
 Name[br]=Nederlandeg
+Name[ca]=Holandès
 Name[cs]=Holandsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
@@ -13,7 +14,6 @@ Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[it]=Olandese
-Name[lt]=Olandų
 Name[pa]=ਡੱਚ
 Name[ru]=Голландский
 Name[rw]=Ikinyaholande
