--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -14,7 +14,11 @@ Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[it]=Olandese
+Name[lt]=Olandų
 Name[pa]=ਡੱਚ
+Name[pl]=Holenderska
+Name[pt]=Holandês
+Name[pt_BR]=Holandês
 Name[ru]=Голландский
 Name[rw]=Ikinyaholande
 Name[sr]=Холандски
