SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=464110

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -30,7 +30,7 @@ GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
-GenericName[de]=Oberfläche für Sprach-Synthesizer
+GenericName[de]=Oberfläche für Sprachsynthesizer
 GenericName[el]=Συνθέτης ομιλίας
 GenericName[en_GB]=Speech Synthesiser Frontend
 GenericName[eo]=Fasado Por Parolsintezilo
