SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=466664

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -15,6 +15,7 @@ Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[it]=Olandese
 Name[lt]=Olandų
+Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
 Name[pt]=Holandês
