SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.4/kdeaccessibility/kmouth/; revision=467098

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -43,6 +43,7 @@ GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nl]=Spraaksynthesizer
