SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=470151

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -13,6 +13,7 @@ Name[et]=Hollandi
 Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
+Name[hu]=Holland
 Name[it]=Olandese
 Name[lt]=Olandų
 Name[nl]=Nederlands
