SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=473594

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -15,6 +15,7 @@ Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[hu]=Holland
 Name[it]=Olandese
+Name[ja]=オランダ語
 Name[lt]=Olandų
 Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
