--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -14,6 +14,7 @@ Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[hu]=Holland
+Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
 Name[lt]=Olandų
