SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=478873

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -18,6 +18,7 @@ Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
 Name[lt]=Olandų
+Name[nb]=Nederlandsk
 Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
