SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=485401

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -13,6 +13,7 @@ Name[et]=Hollandi
 Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
+Name[he]=דנית
 Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
