--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -10,6 +10,7 @@ Name[da]=Hollandsk
 Name[de]=Niederländisch
 Name[es]=Danés
 Name[et]=Hollandi
+Name[eu]=Nederlandera
 Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
