SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=490781

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -31,6 +31,7 @@ Name[rw]=Ikinyaholande
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
 Name[sv]=Holländska
+Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
 Name[uk]=Голландська
 Name[zh_CN]=荷兰语
