SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=495191

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -1,52 +1,3 @@
 [Desktop Entry]
 Name=German
-Name[ar]=ألمانية
-Name[bg]=Немски
-Name[br]=Alamaneg
-Name[bs]=Njemački
-Name[ca]=Alemany
-Name[cs]=Německy
-Name[cy]=Almaeneg
-Name[da]=Tysk
-Name[de]=Deutsch
-Name[el]=Γερμανικά
-Name[eo]=Germana
-Name[es]=Alemán
-Name[et]=Saksa
-Name[fi]=Saksalainen
-Name[fr]=Allemand
-Name[ga]=Gearmáinis
-Name[gl]=Alemán
-Name[he]=גרמנית
-Name[hi]= जर्मनी
-Name[hu]=Német
-Name[is]=Þýska
-Name[it]=Tedesco
-Name[ja]=ドイツ語
-Name[lt]=Vokiečių
-Name[ms]=Jerman
-Name[mt]=Ġermaniż
-Name[nb]=Tysk
-Name[nl]=Duits
-Name[nn]=Tysk
-Name[pa]=ਜਰਮਨ
-Name[pl]=Niemiecka
-Name[pt]=Alemão
-Name[pt_BR]=Alemão
-Name[ro]=Germană
-Name[ru]=Немецкий
-Name[rw]=Ikidage
-Name[sk]=Nemecky
-Name[sl]=nemško
-Name[sr]=Немачки
-Name[sr@Latn]=Nemački
-Name[sv]=Tyska
-Name[ta]=ஜெர்மன்
-Name[tg]=Немисӣ
-Name[th]=เยอรมัน
-Name[tr]=Almanca
-Name[uk]=Німецька
-Name[uz]=Олмонча
-Name[xx]=xxGermanxx
-Name[zh_CN]=德语
-Name[zh_TW]=德語
+Name[x-test]=xxGermanxx
