--- a/books/en.desktop
+++ b/books/en.desktop
@@ -1,53 +1,4 @@
 # KDE Config File
 [Desktop Entry]
 Name=English
-Name[ar]=إنجليزية
-Name[bg]=Английски
-Name[br]=Saozneg
-Name[bs]=Engleski
-Name[ca]=Anglès
-Name[cs]=Anglicky
-Name[cy]=Saesneg
-Name[da]=Engelsk
-Name[de]=Englisch
-Name[el]=Αγγλικά
-Name[eo]=Angla
-Name[es]=Inglés
-Name[et]=Inglise
-Name[fi]=Englantilainen
-Name[fr]=Anglais
-Name[ga]=Béarla
-Name[gl]=Inglés
-Name[he]=אנגלית
-Name[hi]= अंग्रेजी
-Name[hu]=Angol
-Name[is]=Enska
-Name[it]=Inglese
-Name[ja]=英語
-Name[lt]=Anglų
-Name[ms]=Inggeris
-Name[mt]=Ingliż
-Name[nb]=Engelsk
-Name[nl]=Engels
-Name[nn]=Engelsk
-Name[pa]=ਅੰਗਰੇਜ਼ੀ
-Name[pl]=Angielska
-Name[pt]=Inglês
-Name[pt_BR]=Inglês
-Name[ro]=Engleză
-Name[ru]=Английский
-Name[rw]=Icyongereza
-Name[sk]=Anglicky
-Name[sl]=angleško
-Name[sr]=Енглески
-Name[sr@Latn]=Engleski
-Name[sv]=Engelska
-Name[ta]=ஆங்கிலம்
-Name[tg]=Англисӣ
-Name[th]=อังกฤษ
-Name[tr]=İngilizce
-Name[uk]=Англійська
-Name[uz]=Инглизча
-Name[xx]=xxEnglishxx
-Name[zh_CN]=英语
-Name[zh_TW]=英語
+Name[x-test]=xxEnglishxx
