--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -1,53 +1,4 @@
 # KDE Config File
 [Desktop Entry]
 Name=Swedish
-Name[ar]=سويدية
-Name[bg]=Шведски
-Name[br]=Svedeg
-Name[bs]=Švedski
-Name[ca]=Suec
-Name[cs]=Švédsky
-Name[cy]=Swedeg
-Name[da]=Svensk
-Name[de]=Schwedisch
-Name[el]=Σουηδικά
-Name[eo]=Sveda
-Name[es]=Sueco
-Name[et]=Rootsi
-Name[fi]=Ruotsalainen
-Name[fr]=Suédois
-Name[ga]=Sualainnis
-Name[gl]=Sueco
-Name[he]=שוודית
-Name[hi]=स्वीडिश
-Name[hu]=Svéd
-Name[is]=Sænska
-Name[it]=Svedese
-Name[ja]=スウェーデン語
-Name[lt]=Švedų
-Name[ms]=Sweden
-Name[mt]=Svediż
-Name[nb]=Svensk
-Name[nl]=Zweeds
-Name[nn]=Svensk
-Name[pa]=ਸਵੀਡਨੀ
-Name[pl]=Szwedzka
-Name[pt]=Sueco
-Name[pt_BR]=Suíço
-Name[ro]=Suedeză
-Name[ru]=Шведский
-Name[rw]=Ikinyasuwede
-Name[sk]=Švédsky
-Name[sl]=švedsko
-Name[sr]=Шведски
-Name[sr@Latn]=Švedski
-Name[sv]=Svenska
-Name[ta]=ஸ்வீடிஷ்
-Name[tg]=Шведӣ
-Name[th]=สวีเดน
-Name[tr]=İsveççe
-Name[uk]=Шведська
-Name[uz]=Шведча
-Name[xx]=xxSwedishxx
-Name[zh_CN]=瑞典语
-Name[zh_TW]=瑞典語
+Name[x-test]=xxSwedishxx
