--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -6,63 +6,10 @@ Exec=kmouth -caption "%c" %i %m
 Icon=kmouth
 DocPath=kmouth/index.html
 Comment=
-Comment[ro]=Un utilitar de mărit zone ale ecranului
-Comment[xx]=xxxx
+Comment[x-test]=xxxx
 Terminal=false
 Name=KMouth
-Name[ar]=برنامج KMouth
-Name[cy]=KCeg
-Name[eo]=KBuŝo
-Name[hi]=के-माउथ
-Name[is]=KMunnur
-Name[pa]=ਕੇ-ਮੂੰਹ
-Name[ro]=Vorbitor
-Name[sv]=Kmouth
-Name[ta]=K வாய்
-Name[tg]=KДаҳон
-Name[xx]=xxKMouthxx
-Name[zh_CN]=K 语音精灵
+Name[x-test]=xxKMouthxx
 GenericName=Speech Synthesizer Frontend
-GenericName[ar]=واجهة النَظام الصَوتي
-GenericName[bg]=Синтезатор на глас
-GenericName[bs]=Program za sintezu govora
-GenericName[ca]=Interfície per al sintetitzador de veu
-GenericName[cs]=Rozhraní hlasového syntetizátoru
-GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
-GenericName[da]=Forende til tale-synthesizer
-GenericName[de]=Oberfläche für Sprach-Synthesizer
-GenericName[en_GB]=Speech Synthesiser Frontend
-GenericName[eo]=Fasado Por Parolsintezilo
-GenericName[es]=Interfaz de usuario para síntesis de voz
-GenericName[et]=Kõnesüntesaator
-GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
-GenericName[fr]=Interface graphique de synthèse vocale
-GenericName[ga]=Clár tosaigh an sintéiseoir cainte
-GenericName[gl]=Interface de usuario para sintetizador de voz
-GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
-GenericName[hu]=Beszédszintetizátor
-GenericName[is]=Viðmót á talgerfilinn
-GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
-GenericName[ja]=スピーチシンセサイザフロントエンド
-GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
-GenericName[nb]=Brukerflate for talesystem
-GenericName[nl]=Spraaksynthesizer
-GenericName[nn]=Grensesnitt for talesyntese
-GenericName[pl]=Program obsługujący syntezator mowy
-GenericName[pt]=Sintetizador de Fala
-GenericName[pt_BR]=Interface do Sintetizador de Fala
-GenericName[ro]=Interfaţă pentru sinteză vocală
-GenericName[ru]=Интерфейс к синтезаторам речи
-GenericName[sk]=Rozhranie pre syntezátor reči
-GenericName[sl]=Vmesnik za sintezo govora
-GenericName[sr]=Интерфејс за синтетизатор говора
-GenericName[sr@Latn]=Interfejs za sintetizator govora
-GenericName[sv]=Gränssnitt för talsyntes
-GenericName[tg]=Сухани Синтезатори Пешбуда
-GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
-GenericName[tr]=Konuşma Sentezleyici Arayüzü
-GenericName[uk]=Графічний інтерфейс синтезатора мовлення
-GenericName[xx]=xxSpeech Synthesizer Frontendxx
-GenericName[zh_CN]=语音合成器前端
-GenericName[zh_TW]=語音合成器前端
+GenericName[x-test]=xxSpeech Synthesizer Frontendxx
 Categories=Qt;KDE;Utility;Accessibility;
