--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ INCLUDES= -Iphrasebook -Iwordcompletion $(all_includes)
 METASOURCES = AUTO
 
 # the library search path. 
-kmouth_LDFLAGS = $(all_libraries) -lkspell $(KDE_RPATH)
+kmouth_LDFLAGS = $(all_libraries) -lkspell2 -lkde3support $(KDE_RPATH)
 
 rcdir = $(kde_datadir)/kmouth
 rc_DATA = kmouthui.rc
