SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=511235

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -6,10 +6,10 @@ Exec=kmouth -caption "%c" %i %m
 Icon=kmouth
 DocPath=kmouth/index.html
 Comment=
-Comment[x-test]=xxxx
 Terminal=false
 Name=KMouth
 Name[x-test]=xxKMouthxx
 GenericName=Speech Synthesizer Frontend
+GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
 Categories=Qt;KDE;Utility;Accessibility;
