SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=519433

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -45,6 +45,7 @@ GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
+GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nl]=Spraaksynthesizer
