--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -20,6 +20,7 @@ Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
 Name[lt]=Olandų
+Name[ms]=Belanda
 Name[nb]=Nederlandsk
 Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
