SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=534016

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -14,6 +14,7 @@ Name[eu]=Nederlandera
 Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
+Name[gl]=Holandés
 Name[he]=דנית
 Name[hu]=Holland
 Name[is]=Hollenska
