SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=538856

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -19,6 +19,7 @@ Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
+Name[vi]=Mồm K
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة النَظام الصَوتي
@@ -65,6 +66,7 @@ GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
+GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[zh_CN]=语音合成器前端
 GenericName[zh_TW]=語音合成器前端
 Categories=Qt;KDE;Utility;Accessibility;
