-cleanup the toplevel CMakeLists.txt a bit -remove include_directories( CMAKE_CURRENT_SOURCE_DIR CMAKE_CURRENT_BINARY_DIR) in the subdirs, since this is done now automatically by cmake (the CMAKE_INCLUDE_CURRENT_DIR option -include_directories(KDE4_INCLUDES) in the toplevel CMakeLists.txt, so it doesn't have to be done in every subdir
Alex


svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=539891

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ add_subdirectory( phrasebook )
 add_subdirectory( wordcompletion ) 
 add_subdirectory( books ) 
 
-include_directories(${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/ ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}  )
+include_directories(${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/  )
 
 
 ########### next target ###############
