SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=540349

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -28,6 +28,7 @@ Name[lt]=Vokiečių
 Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
+Name[nds]=Hoochdüütsch
 Name[nl]=Duits
 Name[nn]=Tysk
 Name[pa]=ਜਰਮਨ
