--- a/books/en.desktop
+++ b/books/en.desktop
@@ -29,6 +29,7 @@ Name[lt]=Anglų
 Name[ms]=Inggeris
 Name[mt]=Ingliż
 Name[nb]=Engelsk
+Name[nds]=Engelsch
 Name[nl]=Engels
 Name[nn]=Engelsk
 Name[pa]=ਅੰਗਰੇਜ਼ੀ
