--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -23,6 +23,7 @@ Name[ja]=オランダ語
 Name[lt]=Olandų
 Name[ms]=Belanda
 Name[nb]=Nederlandsk
+Name[nds]=Nedderlannsch
 Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
