--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -29,6 +29,7 @@ Name[lt]=Švedų
 Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
+Name[nds]=Sweedsch
 Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[pa]=ਸਵੀਡਨੀ
