--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -49,6 +49,7 @@ GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
+GenericName[nds]=Böversiet för de Blicksnuut
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਮੁੱਖ
