Move desktop file into ${XDG_APPS_DIR} (Categories=Qt;KDE;Utility;Accessibility;)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=546488

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ install_targets(/bin kmouth )
 
 ########### install files ###############
 
-install_files( ${APPLNK_INSTALL_DIR}/Applications FILES kmouth.desktop )
+install_files( ${XDG_APPS_DIR} FILES kmouth.desktop )
 install_files( ${CONFIG_INSTALL_DIR} FILES kmouthrc )
 install_files( ${DATA_INSTALL_DIR}/kmouth FILES kmouthui.rc )
 
