SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=547727

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -32,6 +32,7 @@ Name[pt]=Holandês
 Name[pt_BR]=Holandês
 Name[ru]=Голландский
 Name[rw]=Ikinyaholande
+Name[sk]=Holandsky
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
 Name[sv]=Holländska
