--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -33,6 +33,7 @@ Name[pt_BR]=Holandês
 Name[ru]=Голландский
 Name[rw]=Ikinyaholande
 Name[sk]=Holandsky
+Name[sl]=Nizozemsko
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
 Name[sv]=Holländska
