SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=562885

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -25,6 +25,7 @@ Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
 Name[lt]=Vokiečių
+Name[mk]=Германски
 Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
