--- a/books/en.desktop
+++ b/books/en.desktop
@@ -26,6 +26,7 @@ Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
 Name[lt]=Anglų
+Name[mk]=Англиски
 Name[ms]=Inggeris
 Name[mt]=Ingliż
 Name[nb]=Engelsk
