--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -22,6 +22,7 @@ Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
 Name[lt]=Olandų
+Name[mk]=Холандски
 Name[ms]=Belanda
 Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
