--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -46,6 +46,7 @@ GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
+GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
