--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -26,6 +26,7 @@ Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
 Name[lt]=Švedų
+Name[mk]=Шведски
 Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
