--- a/icons/phrasebook/CMakeLists.txt
+++ b/icons/phrasebook/CMakeLists.txt
@@ -1,22 +1,4 @@
 
+kde4_install_icons( ${DATA_INSTALL_DIR}/kmouth/icons hicolor )
 
 
-
-########### install files ###############
-
-#install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kmouth/icons )
-
-
-
-
-#original Makefile.am contents follow:
-
-######## kdevelop will overwrite this part!!! (begin)##########
-#
-#
-#EXTRA_DIST = hi16-action-phrasebook.png hi16-action-phrasebook_new.png hi16-action-phrasebook_open.png hi16-action-phrasebook_save.png hi22-action-phrasebook.png hi22-action-phrasebook_new.png hi22-action-phrasebook_open.png hi22-action-phrasebook_save.png hi32-action-phrasebook.png hi32-action-phrasebook_new.png hi32-action-phrasebook_open.png hi32-action-phrasebook_save.png hi16-action-phrasebook_closed.png hi22-action-phrasebook_closed.png hi32-action-phrasebook_closed.png 
-#
-######## kdevelop will overwrite this part!!! (end)############
-#
-#kmouthiconsdir = $(kde_datadir)/kmouth/icons
-#kmouthicons_ICON = AUTO
