--- a/icons/history/CMakeLists.txt
+++ b/icons/history/CMakeLists.txt
@@ -5,7 +5,7 @@
 ########### install files ###############
 
 install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kmouth/icons )
-
+kde4_install_icons( ${DATA_INSTALL_DIR}/kmouth/icons  hicolor )
 
 
 
