--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory( app )
 
 ########### install files ###############
 
-kde4_install_icons( ${DATA_INSTALL_DIR}/kmouth/icons hicolor )
+kde4_install_icons( ${DATA_INSTALL_DIR}/kmouth/icons  )
 
 
 
