--- a/icons/app/CMakeLists.txt
+++ b/icons/app/CMakeLists.txt
@@ -1,3 +1,1 @@
-
-kde4_install_icons( ${ICON_INSTALL_DIR}  hicolor )
-kde4_install_icons( ${ICON_INSTALL_DIR}  locolor )
+kde4_install_icons( ${ICON_INSTALL_DIR}   )
