SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=573441

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -14,6 +14,7 @@ Name[eo]=Germana
 Name[es]=Alemán
 Name[et]=Saksa
 Name[eu]=Alemaniera
+Name[fa]=آلمانی
 Name[fi]=Saksalainen
 Name[fr]=Allemand
 Name[ga]=Gearmáinis
