--- a/books/en.desktop
+++ b/books/en.desktop
@@ -15,6 +15,7 @@ Name[eo]=Angla
 Name[es]=Inglés
 Name[et]=Inglise
 Name[eu]=Ingelesa
+Name[fa]=انگلیسی
 Name[fi]=Englantilainen
 Name[fr]=Anglais
 Name[ga]=Béarla
