--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -12,6 +12,7 @@ Name[de]=Niederländisch
 Name[es]=Danés
 Name[et]=Hollandi
 Name[eu]=Nederlandera
+Name[fa]=هلندی
 Name[fi]=Tanskalainen
 Name[fr]=Hollandais
 Name[ga]=Ollainnis
