--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -36,6 +36,7 @@ GenericName[eo]=Fasado Por Parolsintezilo
 GenericName[es]=Interfaz de usuario para síntesis de voz
 GenericName[et]=Kõnesüntesaator
 GenericName[eu]=Hizkera-sintetizadorearen interfazea
+GenericName[fa]=پیش ترکیب دهنده گفتار
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Clár tosaigh an sintéiseoir cainte
