--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -15,7 +15,7 @@ Name[eo]=Sveda
 Name[es]=Sueco
 Name[et]=Rootsi
 Name[eu]=Suediera
-Name[fa]=سوئد
+Name[fa]=سوئدی
 Name[fi]=Ruotsalainen
 Name[fr]=Suédois
 Name[ga]=Sualainnis
